[gd_scene load_steps=5 format=3 uid="uid://cxc30n76bxc7g"]

[ext_resource type="Script" uid="uid://dayhu1kmyr0ki" path="res://scripts/ui/glass_button.gd" id="1_4syws"]
[ext_resource type="Texture2D" uid="uid://cwvbpdr04yew6" path="res://assets/utensils/glasses/highball/highball_glass_front.png" id="1_rp51d"]
[ext_resource type="Texture2D" uid="uid://duab4sew53qge" path="res://assets/utensils/glasses/highball/highball_glass_back.png" id="2_4syws"]
[ext_resource type="Resource" uid="uid://bmih0fbkyl0py" path="res://resources/glasses/chronos_coupe.tres" id="2_7wjfa"]

[node name="GlassButton" type="Button"]
custom_minimum_size = Vector2(200, 200)
script = ExtResource("1_4syws")
glass = ExtResource("2_7wjfa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -13.5
offset_right = 60.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GlassIcon" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_filter = 2

[node name="GlassIconFront" type="TextureRect" parent="VBoxContainer/GlassIcon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_rp51d")
expand_mode = 1
stretch_mode = 5

[node name="GlassIconBack" type="TextureRect" parent="VBoxContainer/GlassIcon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4syws")
expand_mode = 1
stretch_mode = 5

[node name="GlassLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Aether Highball"
horizontal_alignment = 1
